--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clickygame",
-  "homepage": "http://myname.github.io/myapp",
+  "homepage": "http://sdennisp25.github.io/react-gh-pages",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +13,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
