--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clickygame",
-  "homepage": "http://sdennisp25.github.io/react-gh-pages",
+  "homepage": "http://sdennisp25.github.io/clickygame/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
